--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="slider-container">
                 <i class="fa fa-volume-off"></i>
-                <input type="range" min = "1" max="100" value="99" class="volume-slider" onchange= "setVolume()">
+                <input type="range" min = "1" max="100" value="99" class="volume-slider">
                 <i class="fa fa-volume-high"></i>
             </div>
 
